## =========
Version 2.3-4 [2022-06-02]

New functions:
  - seqlength.align() sets lengths of sequences of multiple
    domains as the shortest length among the domains.
  - seqmaintokens() returns indexes of more frequent tokens.

Changes in existing function:
  - seqformat(), seqdef(), seqdecomp(), seqconc(), seqstatl() 
    now support tibble input data.
  - seqdistmc(): option what="sm" becomes what="cost".
    Deprecated "sm" value maintained for backward
    compatibility.
  - plot.stslist.rep() gains two arguments seq.alt to specify
    the domain in which representatives are displayed
    and info to control whether coverage info should
    be displayed.


## =========
Version 2.2-3 [2022-01-19]

New functions:
  - summary.ddomassoc() summary method that organizes
    outcome of dissdomassoc in table form.

Changes in existing functions:
  - dissdomassoc() now returns also p-values of the
    computed correlations.
  - plot.subseqelistchisq() (plot of outcome of seqecmpgroup)
    gains attribute 'with.legend'.
  - plot.stslist.modst() new attribute 'info' to control
    whether frequency of sequence of modal state should
    be displayed.
  - plot.ststlist.meant() now uses an internal function
    to draw error bars to avoid issues with dependence
    on Hmisc.
  - plot.ststlist.meant() new arguments 'bar.labels',
    'cex.barlab', and 'offset.barlab' to display and
    control bar labels.
  - seqmtplot() (seqplot(..,type="mt",..)) adapted for
    handling bar labels with groups. See details in
    seqplot help page.
  - seqformat() with from="SPELL", provides info about
    number of sequences truncated, empty sequences because
    of spell occurring before birth year, and empty because
    of missing start time. A new attribute 'issues' contains
    the indexes of sequences with issues.
  - seqdef() now prints, when applicable, the number of
    empty sequences and lists the first 9 empty sequences only.