@@ -8,7 +8,7 @@
  seqstatl(data, var=NULL, format='STS')
 }
 \arguments{
-  \item{data}{a data frame, matrix, or character string vector containing sequence data. If a tibble, converted with \code{as.data.frame}.}
+  \item{data}{a data frame, matrix, or character string vector containing sequence data (tibble will be converted with \code{as.data.frame}).}
   \item{var}{the list of columns containing the sequences. Default \code{NULL} means all columns. Whether the sequences are in the compressed (character strings) or extended format is automatically detected from the number of columns.}.
   \item{format}{the format of the sequence data set. One of \code{"STS"}, \code{"SPS"}, \code{"DSS"}. Default is \code{"STS"}. The \code{seqstatl} function uses the \code{\link{seqformat}} function to translate between formats when necessary.}
 }
